tests/transpiler/x/pl/python_math.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/python_math.pl:1: Initialization goal raised exception:
ERROR: Arguments are not sufficiently instantiated
